--- a/src/app/ApplicationsListDept/applications-list-dept-dialog/applications-list-dept-dialog.component.html
+++ b/src/app/ApplicationsListDept/applications-list-dept-dialog/applications-list-dept-dialog.component.html
@@ -19,27 +19,27 @@
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>הסבר על המערכת</mat-label>
-      <textarea matInput formControlName="AppDescription"></textarea>
+      <textarea matInput formControlName="appDescription"></textarea>
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>רפרנט ראשי</mat-label>
-      <input matInput formControlName="PrimaryReference">
+      <input matInput formControlName="primaryReference">
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>רפרנט משני</mat-label>
-      <input matInput formControlName="SecondaryReference">
+      <input matInput formControlName="secondaryReference">
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>הערות</mat-label>
-      <textarea matInput formControlName="Remarks"></textarea>
+      <textarea matInput formControlName="remarks"></textarea>
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>טלפונים</mat-label>
-      <input matInput formControlName="Phones">
+      <input matInput formControlName="phones">
     </mat-form-field>
 
     <!-- Guide (single) -->
