--- a/src/app/MARAA/measurement-remarks-dialog/measurement-remarks-dialog.component.html
+++ b/src/app/MARAA/measurement-remarks-dialog/measurement-remarks-dialog.component.html
@@ -22,25 +22,32 @@
   </mat-form-field>
 
   <mat-checkbox [(ngModel)]="subtract" (change)="onSubtractChange()">בקשה לגרוע</mat-checkbox>
-  <div class="meta">
-    <span *ngIf="(data?.entryUserSubtract || data?.EntryUserSubtract)">
-      נרשם על ידי: {{ (data?.entryUserSubtract || data?.EntryUserSubtract) }}
-    </span>
-    <span *ngIf="(data?.entryDateSubtract || data?.EntryDateSubtract)">
-      בתאריך {{ (data?.entryDateSubtract || data?.EntryDateSubtract) | date:'dd/MM/yyyy HH:mm' }}
-    </span>
-  </div>
-
-  <mat-checkbox [(ngModel)]="aprovedMabar" (change)="onApproveChange()">מאושר מבר</mat-checkbox>
-  <div class="meta">
-    <span *ngIf="(data?.entryUserAprovedMabar || data?.EntryUserAprovedMabar)">
-      נרשם על ידי: {{ (data?.entryUserAprovedMabar || data?.EntryUserAprovedMabar) }}
-    </span>
-    <span *ngIf="(data?.entryDateAprovedMabar || data?.EntryDateAprovedMabar)">
-      בתאריך {{ (data?.entryDateAprovedMabar || data?.EntryDateAprovedMabar) | date:'dd/MM/yyyy HH:mm' }}
-    </span>
-  </div>
-</mat-dialog-content>
+    <div class="meta">
+      <span *ngIf="(data?.entryUserSubtract || data?.EntryUserSubtract)">
+        נרשם על ידי: {{ (data?.entryUserSubtract || data?.EntryUserSubtract) }}
+      </span>
+      <span *ngIf="(data?.entryDateSubtract || data?.EntryDateSubtract)">
+        בתאריך {{ (data?.entryDateSubtract || data?.EntryDateSubtract) | date:'dd/MM/yyyy HH:mm' }}
+      </span>
+    </div>
+  
+  <ng-container *ngIf="isNBenShimon">
+      <mat-checkbox 
+          [(ngModel)]="aprovedMabar" 
+          (change)="onApproveChange()">
+          מאושר מבר
+    </mat-checkbox>
+    
+      <div class="meta">
+        <span *ngIf="(data?.entryUserAprovedMabar || data?.EntryUserAprovedMabar)">
+          נרשם על ידי: {{ (data?.entryUserAprovedMabar || data?.EntryUserAprovedMabar) }}
+        </span>
+        <span *ngIf="(data?.entryDateAprovedMabar || data?.EntryDateAprovedMabar)">
+          בתאריך {{ (data?.entryDateAprovedMabar || data?.EntryDateAprovedMabar) | date:'dd/MM/yyyy HH:mm' }}
+        </span>
+      </div>
+  </ng-container>
+  </mat-dialog-content>
 
 <mat-dialog-actions align="end">
   <button mat-button (click)="dialogRef.close()">ביטול</button>
