--- a/src/app/ApplicationsListDept/servers-dialog/servers-dialog.component.scss
+++ b/src/app/ApplicationsListDept/servers-dialog/servers-dialog.component.scss
@@ -22,4 +22,26 @@
     &.crit { color:#c62828; background:rgba(244,67,54,.15);  border-color:#ef9a9a; }
   }
   
+  /* ping indicator */
+.ping-dot {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    vertical-align: middle;
+    margin-inline-end: 8px;
+    background: #9e9e9e; /* default/unknown */
+  }
+  .ping-dot.up {
+    background: #2e7d32;              /* green */
+    box-shadow: 0 0 0 3px rgba(76,175,80,.18);
+  }
+  .ping-dot.down {
+    background: #c62828;              /* red */
+    box-shadow: 0 0 0 3px rgba(244,67,54,.18);
+  }
+  .ping-text {
+    font-weight: 600;
+    opacity: .9;
+  }
   
