--- a/src/app/global-app-permission/global-app-permission.component.html
+++ b/src/app/global-app-permission/global-app-permission.component.html
@@ -1,93 +1,83 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
 <div class="body">
-  <!-- Top-right home button -->
-  <div class="top-right-container">
-    <button mat-icon-button (click)="goToHome()" matTooltip="Go to Home">
-      <mat-icon>home</mat-icon>
-    </button>
-  </div>
 
-  <!-- Title -->
-  <div class="nine">
-    <h1>
-      {{ titleUnit }}
-      <span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span>
-    </h1>
-  </div>
 
   <!-- Filters form (RTL) -->
-  <form [formGroup]="filterForm" dir="rtl" class="filter-form">
-
-    <!-- Checkbox filters row (replaces the per-column text filters) -->
+<!-- Filters form (RTL) -->
+<form [formGroup]="filterForm" dir="rtl" class="filter-form">
     <div class="container-fluid mb-2">
       <div class="row search-count">
         <div class="col">
           <div dir="rtl" class="card">
             <div dir="rtl" class="card-body" style="display:flex; gap:24px; align-items:center; flex-wrap:wrap">
-              
-              <!-- כשמסומן: מציג רק שורות שיש בהן ערך בשדה הזה -->
-              <mat-checkbox
-                formControlName="hasEitanOnly"
-                (change)="applyFilters()"
-                matTooltip="כשהתיבה מסומנת: מציג רק שורות עם ערך"
-              >
-קיימת קבוצה ב AD              </mat-checkbox>
-
-              <mat-checkbox
-                formControlName="hasNamerOnly"
-                (change)="applyFilters()"
-                matTooltip="כשהתיבה מסומנת: מציג רק שורות עם ערך"
-              >
-                NAMER 
-              </mat-checkbox>
-
-              <mat-checkbox
-                formControlName="hasAdActiveOnly"
-                (change)="applyFilters()"
-                matTooltip="כשהתיבה מסומנת: מציג רק שורות עם ערך"
-              >
-                AD קבוצות ב
-              </mat-checkbox>
-
+  
+              <!-- Existing toggles -->
+              <mat-slide-toggle formControlName="hasEitanOnly" (change)="applyFilters()" matTooltip="דלוק: הצג רק שורות עם ערך">
+                קיימת קבוצה ב-AD
+              </mat-slide-toggle>
+  
+              <mat-slide-toggle formControlName="hasNamerOnly" (change)="applyFilters()" matTooltip="דלוק: הצג רק שורות עם ערך">
+                NAMER
+              </mat-slide-toggle>
+  
+              <mat-slide-toggle formControlName="hasAdActiveOnly" (change)="applyFilters()" matTooltip="דלוק: הצג רק שורות עם ערך">
+                קבוצות ב-AD
+              </mat-slide-toggle>
+  
+              <!-- NEW TOGGLES -->
+              <mat-slide-toggle formControlName="hasChameleonOnly" (change)="applyFilters()" matTooltip="דלוק: הצג רק שורות עם ערך">
+                Chameleon קבוצה
+              </mat-slide-toggle>
+  
+              <mat-slide-toggle formControlName="hasChameleonRestrictedOnly" (change)="applyFilters()" matTooltip="דלוק: הצג רק שורות עם ערך">
+                יחידות חסויות בקמיליון
+              </mat-slide-toggle>
+  
+              <mat-slide-toggle formControlName="hasOnlineOnly" (change)="applyFilters()" matTooltip="דלוק: הצג רק שורות עם ערך">
+                משתמש פעיל Online
+              </mat-slide-toggle>
+  
+              <mat-slide-toggle formControlName="hasEveOnly" (change)="applyFilters()" matTooltip="דלוק: הצג רק שורות עם ערך">
+                EVE - יחידה חסויה
+              </mat-slide-toggle>
+  
               <div class="reset-button-container" style="margin-inline-start:auto">
                 <button
                   mat-button
-                  (click)="filterForm.reset({ globalFilter: '', hasEitanOnly: false, hasNamerOnly: false, hasAdActiveOnly: false }); applyFilters()"
+                  (click)="resetAllFilters()"
                   mat-raised-button
                   color="primary"
                   class="custom-button"
-                  matTooltip="נקה מסננים"
-                >
+                  matTooltip="נקה מסננים">
                   <i class="material-icons">refresh</i>
                 </button>
               </div>
-
+  
             </div>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- Global search + Excel -->
-    <div dir="rtl" style="display:flex; justify-content:space-between; align-items:center">
-      <mat-form-field class="long-search-bar" style="flex:1; padding-right:10px">
-        <mat-label class="filters" style="color: blue"> חיפוש</mat-label>
-        <input matInput formControlName="globalFilter" (input)="applyFilters()" class="search-input" />
-      </mat-form-field>
-
-      <div class="icon" matTooltip="הורד לאקסל">
-        <img
-          src="../../assets/excel.png"
-          alt="Download"
-          (click)="exportToExcel()"
-          class="download-icon"
-          width="50px"
-        />
-      </div>
-    </div>
   </form>
-
+  <!-- Global search + Excel -->
+<div dir="rtl" style="display:flex; justify-content:space-between; align-items:center">
+    <mat-form-field class="long-search-bar" style="flex:1; padding-right:10px">
+      <mat-label class="filters" style="color: blue"> חיפוש</mat-label>
+      <input matInput formControlName="globalFilter" (input)="applyFilters()" class="search-input" />
+    </mat-form-field>
+  
+    <div class="icon" matTooltip="הורד לאקסל">
+      <img
+        src="../../assets/excel.png"
+        alt="Download"
+        (click)="exportToExcel()"
+        class="download-icon"
+        width="50px"
+      />
+    </div>
+  </div>
+  
   <!-- Data table -->
   <mat-table [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
 
@@ -128,6 +118,34 @@
       {{ element.adActivePermision || '' }}
     </div>
   </span>
+  <!-- Chameleon group -->
+<span *ngSwitchCase="'ChamelleonGropPermision'">
+    <div class="cell-text cell-text-long" [matTooltip]="element.ChamelleonGropPermision || ''">
+      {{ element.ChamelleonGropPermision || '' }}
+    </div>
+  </span>
+  
+  <!-- Chameleon restricted group -->
+  <span *ngSwitchCase="'ChamelleonRestrictedGropPermision'">
+    <div class="cell-text cell-text-long" [matTooltip]="element.ChamelleonRestrictedGropPermision || ''">
+      {{ element.ChamelleonRestrictedGropPermision || '' }}
+    </div>
+  </span>
+  
+  <!-- Online active user -->
+  <span *ngSwitchCase="'OnnLineActiveUser'">
+    <div class="cell-text" [matTooltip]="element.OnnLineActiveUser || ''">
+      {{ element.OnnLineActiveUser || '' }}
+    </div>
+  </span>
+  
+  <!-- EVE active user -->
+  <span *ngSwitchCase="'EVEActiveUser'">
+    <div class="cell-text" [matTooltip]="element.EVEActiveUser || ''">
+      {{ element.EVEActiveUser || '' }}
+    </div>
+  </span>
+  
 
           <!-- Default -->
           <span *ngSwitchDefault>
@@ -145,10 +163,9 @@
 
   <!-- Paginator -->
   <mat-paginator
-    [length]="matTableDataSource.data.length || 0"
-    [pageIndex]="0"
-    [pageSize]="15"
-    [pageSizeOptions]="[15, 50, 100]"
-  >
-  </mat-paginator>
+  [length]="totalResults"
+  [pageIndex]="0"
+  [pageSize]="5"
+  [pageSizeOptions]="[5, 15, 50, 100]">
+</mat-paginator>
 </div>
