--- a/src/app/global-app-permission/global-app-permission.component.html
+++ b/src/app/global-app-permission/global-app-permission.component.html
@@ -12,7 +12,13 @@
           <div dir="rtl" class="card">
             <div dir="rtl" class="card-body" style="display:flex; gap:24px; align-items:center; flex-wrap:wrap">
   
-   
+              <!-- Existing toggles -->
+              <!-- <mat-slide-toggle
+  formControlName="activeToggle"
+  (change)="applyFilters()"
+  matTooltip="דלוק: רק עובדים פעילים (EndWorkDate ריק). כבוי: רק לא פעילים">
+  עובד פעיל / לא פעיל
+</mat-slide-toggle> -->
 <mat-form-field  style="width: 220px">
     <mat-label>משתמש פעיל Online</mat-label>
     <mat-select formControlName="onlineFilter" (selectionChange)="applyFilters()">
@@ -84,8 +90,6 @@
         </div>
       </div>
     </div>
-
-    
   </form>
   <!-- Global search + Excel -->
 
